--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="password-output">
                 <div class="output">
                     <p id="password">Generated Password</p>
-                    <i class="fa-regular fa-clipboard"></i>
+                    <i class="fa-regular fa-clipboard" id = 'copy'></i>
                 </div>
                 <div class="strength-bar">
                     <div class="fill"></div>
